@@ -44,6 +44,9 @@ Using jasypt from Maven 1.x
       <artifactId>commons-codec</artifactId>
       <version>1.1</version>
     </dependency>
+    <!-- 
+       ICU4J is only needed if you are using Java 6 or higher.
+    -->
     <dependency>
       <groupId>com.ibm.icu</groupId>
       <artifactId>icu4j</artifactId>
